[gd_scene load_steps=36 format=2]

[ext_resource path="res://Source/Actors/Enemy.gd" type="Script" id=1]
[ext_resource path="res://Assets/Sprites/weapon_anime_sword.png" type="Texture" id=10]
[ext_resource path="res://Assets/knight_spritesheet.png" type="Texture" id=12]
[ext_resource path="res://Source/Actors/En_AnimationTree.gd" type="Script" id=13]

[sub_resource type="Animation" id=13]
resource_name = "fall"
length = 0.2
tracks/0/type = "value"
tracks/0/path = NodePath("En_Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 0 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("En_Sprite:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0.1 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 0.105882, 0.458824, 0.611765, 1 ) ]
}

[sub_resource type="Animation" id=1]
resource_name = "hit"
length = 0.5
tracks/0/type = "value"
tracks/0/path = NodePath("En_Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 0 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("En_Sprite:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 0.490196, 0.0666667, 0.878431, 1 ) ]
}

[sub_resource type="Animation" id=2]
resource_name = "idle"
length = 0.4
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("En_Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 4, 5, 6, 7 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("En_Sprite:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0.1 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ) ]
}

[sub_resource type="Animation" id=14]
resource_name = "jump"
length = 0.2
tracks/0/type = "value"
tracks/0/path = NodePath("En_Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 0 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("En_Sprite:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0.1 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 0.65098, 0.105882, 0.321569, 1 ) ]
}

[sub_resource type="Animation" id=3]
resource_name = "run"
length = 0.4
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("En_Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 8, 9, 10, 11 ]
}

[sub_resource type="AnimationNodeAnimation" id=15]
animation = "fall"

[sub_resource type="AnimationNodeAnimation" id=16]
animation = "hit"

[sub_resource type="AnimationNodeAnimation" id=17]
animation = "idle"

[sub_resource type="AnimationNodeAnimation" id=18]
animation = "jump"

[sub_resource type="AnimationNodeAnimation" id=19]
animation = "run"

[sub_resource type="AnimationNodeStateMachineTransition" id=20]

[sub_resource type="AnimationNodeStateMachineTransition" id=21]

[sub_resource type="AnimationNodeStateMachineTransition" id=22]

[sub_resource type="AnimationNodeStateMachineTransition" id=23]

[sub_resource type="AnimationNodeStateMachineTransition" id=24]
switch_mode = 2

[sub_resource type="AnimationNodeStateMachineTransition" id=25]
switch_mode = 2

[sub_resource type="AnimationNodeStateMachineTransition" id=26]
switch_mode = 2

[sub_resource type="AnimationNodeStateMachineTransition" id=27]
switch_mode = 2

[sub_resource type="AnimationNodeStateMachineTransition" id=28]
switch_mode = 2

[sub_resource type="AnimationNodeStateMachineTransition" id=29]
switch_mode = 2

[sub_resource type="AnimationNodeStateMachineTransition" id=30]
switch_mode = 2

[sub_resource type="AnimationNodeStateMachine" id=31]
states/fall/node = SubResource( 15 )
states/fall/position = Vector2( 569, 348 )
states/hit/node = SubResource( 16 )
states/hit/position = Vector2( 569, 71 )
states/idle/node = SubResource( 17 )
states/idle/position = Vector2( 390, 262 )
states/jump/node = SubResource( 18 )
states/jump/position = Vector2( 574, 490 )
states/run/node = SubResource( 19 )
states/run/position = Vector2( 758, 262 )
transitions = [ "idle", "hit", SubResource( 20 ), "run", "hit", SubResource( 21 ), "idle", "run", SubResource( 22 ), "run", "idle", SubResource( 23 ), "hit", "idle", SubResource( 24 ), "hit", "run", SubResource( 25 ), "idle", "jump", SubResource( 26 ), "jump", "fall", SubResource( 27 ), "fall", "idle", SubResource( 28 ), "run", "jump", SubResource( 29 ), "fall", "run", SubResource( 30 ) ]
graph_offset = Vector2( 228.672, 163.525 )

[sub_resource type="AnimationNodeStateMachinePlayback" id=32]

[sub_resource type="Animation" id=5]
length = 0.16
step = 0.01
tracks/0/type = "value"
tracks/0/path = NodePath(".:rotation_degrees")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.08, 0.16, 1 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 0,
"values": [ 0.0, 90.0, 0.0, 90.0 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath(".:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.08, 0.16, 1 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( -4.42267, 11.2433 ), Vector2( 5, 11.243 ), Vector2( -4.42267, 11.2433 ), Vector2( 5, 11.243 ) ]
}

[sub_resource type="Animation" id=6]
length = 0.16
step = 0.01
tracks/0/type = "value"
tracks/0/path = NodePath(".:rotation_degrees")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.08, 0.16, 1 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 0,
"values": [ 0.0, -90.0, 0.0, 90.0 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath(".:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.08, 0.16, 1 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 4.423, 11.243 ), Vector2( -5, 11.243 ), Vector2( 4.423, 11.243 ), Vector2( 5, 11.243 ) ]
}

[sub_resource type="Animation" id=7]
length = 0.4
tracks/0/type = "value"
tracks/0/path = NodePath(".:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2, 0.4 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector2( -4.42267, 11.2433 ), Vector2( -4.423, 9.45 ), Vector2( -4.423, 11.243 ) ]
}

[sub_resource type="Animation" id=8]
length = 0.4
tracks/0/type = "value"
tracks/0/path = NodePath(".:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2, 0.4 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 4.423, 11.243 ), Vector2( 4.423, 9.45 ), Vector2( 4.423, 11.243 ) ]
}

[sub_resource type="RectangleShape2D" id=9]
extents = Vector2( 3.9942, 10 )

[sub_resource type="RectangleShape2D" id=10]
extents = Vector2( 4.6277, 7.45449 )

[sub_resource type="RectangleShape2D" id=11]
extents = Vector2( 2.85556, 2.91649 )

[sub_resource type="RectangleShape2D" id=12]
extents = Vector2( 2.53204, 3.35425 )

[node name="Enemy" type="KinematicBody2D" groups=[
"Enemy",
]]
position = Vector2( -0.0897446, 0 )
collision_layer = 2
collision_mask = 5
script = ExtResource( 1 )

[node name="En_Sprite" type="Sprite" parent="."]
texture = ExtResource( 12 )
vframes = 3
hframes = 4
frame = 6

[node name="En_AnimationPlayer" type="AnimationPlayer" parent="."]
playback_process_mode = 0
anims/fall = SubResource( 13 )
anims/hit = SubResource( 1 )
anims/idle = SubResource( 2 )
anims/jump = SubResource( 14 )
anims/run = SubResource( 3 )

[node name="En_AnimationTree" type="AnimationTree" parent="."]
tree_root = SubResource( 31 )
anim_player = NodePath("../En_AnimationPlayer")
active = true
process_mode = 0
parameters/playback = SubResource( 32 )
script = ExtResource( 13 )

[node name="WeaponSprite" type="Sprite" parent="."]
position = Vector2( -4.42267, 11.2433 )
scale = Vector2( 0.42822, 0.42822 )
texture = ExtResource( 10 )
offset = Vector2( 0.0310316, -14.4778 )

[node name="AttackDelay" type="Timer" parent="WeaponSprite"]

[node name="EnemyAnimation" type="AnimationPlayer" parent="WeaponSprite"]
autoplay = "swordAttack"
anims/swordAttack = SubResource( 5 )
anims/swordAttack_flip_h = SubResource( 6 )
anims/weaponIdle = SubResource( 7 )
anims/weaponIdle_flip_h = SubResource( 8 )

[node name="WeaponArea" type="Area2D" parent="WeaponSprite"]
monitorable = false

[node name="WeaponCollision" type="CollisionShape2D" parent="WeaponSprite/WeaponArea"]
self_modulate = Color( 0.839216, 1, 0.172549, 1 )
position = Vector2( 0, -17.3985 )
shape = SubResource( 9 )

[node name="EnemyCollision" type="CollisionShape2D" parent="."]
position = Vector2( -0.383843, 6.29659 )
shape = SubResource( 10 )

[node name="VisibilityEnabler2D" type="VisibilityEnabler2D" parent="."]
position = Vector2( -0.122086, 6.7802 )
scale = Vector2( 0.460393, 0.70373 )

[node name="StompDetector" type="Area2D" parent="."]
modulate = Color( 0.278431, 0.231373, 0.843137, 1 )
position = Vector2( -0.122086, -3.17426 )
monitorable = false
collision_layer = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="StompDetector"]
position = Vector2( 0.0799427, -1.13841 )
shape = SubResource( 11 )

[node name="FrontDetector" type="Area2D" parent="."]
collision_layer = 2
collision_mask = 4

[node name="FrontCollision" type="CollisionShape2D" parent="FrontDetector"]
position = Vector2( 10.5538, -0.0556989 )
shape = SubResource( 12 )

[node name="BackDetector" type="Area2D" parent="."]
collision_layer = 2
collision_mask = 4

[node name="BackDetector" type="CollisionShape2D" parent="BackDetector"]
position = Vector2( -9.33681, -0.750001 )
shape = SubResource( 12 )

[node name="JumpDelay" type="Timer" parent="."]
wait_time = 0.3
autostart = true
[connection signal="enemy_hp_update" from="." to="En_AnimationTree" method="_on_Enemy_enemy_hp_update"]
[connection signal="timeout" from="WeaponSprite/AttackDelay" to="." method="_on_AttackDelay_timeout"]
[connection signal="body_entered" from="WeaponSprite/WeaponArea" to="." method="_on_WeaponArea_body_entered"]
[connection signal="body_entered" from="StompDetector" to="." method="_on_AtompDetector_body_entered"]
[connection signal="area_entered" from="FrontDetector" to="." method="_on_FrontDetector_area_entered"]
[connection signal="area_shape_entered" from="FrontDetector" to="." method="_on_FrontDetector_area_shape_entered"]
[connection signal="body_entered" from="FrontDetector" to="." method="_on_FrontDetector_body_entered"]
[connection signal="body_entered" from="BackDetector" to="." method="_on_BackDetector_body_entered"]
[connection signal="timeout" from="JumpDelay" to="." method="_on_JumpDelay_timeout"]
